# FlexiML

./: .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build-and-test.yml  discord-ci-notifier.yml  discord-notifier.yml  discord_notifier.yml  fleximl_tests.yml  publish-template.yml  publish.yml  test.yml
crates/fleximl/: Cargo.toml
crates/fleximl-models/: Cargo.toml  README.md
crates/fleximl-models/src/ml/: linear_model.rs  mod.rs
crates/fleximl-models/tests/: mod.rs
crates/fleximl-models/tests/ml/: linear_model.rs  linear_model_test.rs  mod.rs
pytests/models/: linear_model_test.py
src/: fleximl.rs  lib.rs
src/models/: linear_model.rs  mod.rs
tests/models/: linear_model_test.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs  publish.rs
xtask/src/utils/: cargo.rs  mod.rs  process.rs
