[package]
name = "fleximl"
version = "0.1.0"
edition = "2021"
authors = ["Elesdes"]
description = "A high-performance machine learning library implemented in Rust with Python bindings"
license = "MIT"
repository = "https://github.com/Elesdes/FlexiML"

[lib]
name = "fleximl"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module", "auto-initialize"] }
ndarray = "0.15.6"
rand = "0.8.5"

[build-dependencies]
pyo3-build-config = "0.19.2"

[dev-dependencies]
approx = "0.5.1"

[profile.release]
opt-level = 3
lto = true

[package.metadata.maturin]
name = "fleximl"
