[workspace]
members = ["crates/fleximl-models", "xtask"]

[workspace.package]
name = "fleximl"
authors = ["Elesdes"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A machine learning library implemented in Rust"
repository = "https://github.com/Elesdes/FlexiML"

[workspace.dependencies]
ndarray = "0.15.6"
rand = "0.8.5"
approx = "0.5.1"

[profile.dev]
debug = 0
opt-level = 2
lto = true
