# Code copy/pasted from https://github.com/tracel-ai/burn/blob/main/xtask/Cargo.toml
[package]
name = "xtask"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
