[package]
name = "fleximl-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A high-performance machine learning library implemented in Rust"
categories = ["science"]
keywords = ["deep-learning", "machine-learning"]
repository = "https://github.com/Elesdes/FlexiML/tree/main/crates/fleximl-models"

[lib]
path = "src/lib.rs"

[dependencies]
ndarray.workspace = true
rand.workspace = true

[dev-dependencies]
approx.workspace = true
