[package]
name = "fleximl-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Machine Learning & Deep Learning models available for FlexiML framework"
categories = ["science"]
keywords = ["deep-learning", "machine-learning", "data"]
repository = "https://github.com/Elesdes/FlexiML/tree/main/crates/fleximl-models"

[lib]
path = "src/lib.rs"

[dependencies]
ndarray.workspace = true
rand.workspace = true

[dev-dependencies]
approx.workspace = true
