[package]
name = "fleximl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ndarray.workspace = true
rand.workspace = true

[dev-dependencies]
approx.workspace = true
